objects/Request_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>CaseID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseID</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request Tracking</relationshipLabel>
        <relationshipName>Request_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RequestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Request Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>